--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "babel-preset-expo": "8.3.0"
   },
   "private": true
 }
